[tool.poetry]
name = "dcs-grpc"
version = "0.6.0"
description = "Python bindings for the DCS gRPC API https://github.com/DCS-gRPC/rust-server"
authors = ["Brian Peterson <brian.peterson@cloudshift.cc>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "dcs"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
grpcio = "^1.59.2"
grpcio-tools = "^1.59.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

